Fix spacing when headers go onto two lines

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -89,6 +89,7 @@
 /***************************/
 .main-content {
 	color: $textColorPrimary;
+	margin-top: 5em;
 	.container { margin-top: 30px; }
 	h3 {
 		background: #62839a;
